Cleanup: Extend LocalIndexedRepo instead of AbstractIndexedRepo.