@@ -1,17 +1,11 @@
 package bndtools.bndplugins.repo.git;
 
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -20,33 +14,22 @@ import java.util.StringTokenizer;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.regex.Matcher;
 
-import javax.xml.transform.stream.StreamResult;
-
 import org.eclipse.jgit.api.Git;
 import org.eclipse.jgit.api.MergeResult.MergeStatus;
 import org.eclipse.jgit.api.PullResult;
 import org.eclipse.jgit.lib.Constants;
 import org.eclipse.jgit.lib.Repository;
 import org.eclipse.jgit.transport.CredentialsProvider;
-import org.osgi.service.bindex.BundleIndexer;
-import org.xml.sax.InputSource;
-import org.xml.sax.XMLReader;
 
-import aQute.lib.deployer.FileRepo;
-import aQute.lib.deployer.repository.AbstractIndexedRepo;
+import aQute.lib.deployer.repository.LocalIndexedRepo;
+import aQute.lib.deployer.repository.api.IRepositoryContentProvider;
 import aQute.lib.io.IO;
 import aQute.lib.osgi.Jar;
 import aQute.libg.glob.Glob;
-import aQute.libg.reporter.Reporter;
-import aQute.libg.sax.SAXUtil;
-import aQute.libg.sax.filters.MergeContentFilter;
 
-public class GitOBRRepo extends AbstractIndexedRepo {
+public class GitOBRRepo extends LocalIndexedRepo {
 
-	public static final String PROP_LOCAL_DIR = "local";
 	public static final String PROP_LOCAL_SUB_DIR = "sub";
-	public static final String PROP_READONLY = "readonly";
-	public static final String PROP_PRETTY = "pretty";
 	public static final String PROP_GIT_REPO_XML_URI = "git-repo-xml-uri";
 	public static final String PROP_GIT_URI = "git-uri";
 	public static final String PROP_GIT_PUSH_URI = "git-push-uri";
@@ -57,12 +40,9 @@ public class GitOBRRepo extends AbstractIndexedRepo {
 	private static final String PREFIX_USER = "uid.";
 	private static final String PREFIX_PASSWORD = "pwd.";
 
-	protected final FileRepo storageRepo = new FileRepo();
 	private boolean pretty = false;
 
 	protected File gitRootDir;
-	protected File storageDir;
-	protected File localIndex;
 
 	protected Repository repository;
 
@@ -77,14 +57,7 @@ public class GitOBRRepo extends AbstractIndexedRepo {
 	private final List<Mapping> mappings = Collections.synchronizedList(new LinkedList<Mapping>());
 
 	@Override
-	public synchronized void setReporter(Reporter reporter) {
-		super.setReporter(reporter);
-		storageRepo.setReporter(reporter);
-	}
-
-	@Override
 	public synchronized void setProperties(Map<String, String> map) {
-		super.setProperties(map);
 
 		configFileList = map.get(CONFIG_FILE_LIST);
 
@@ -108,7 +81,6 @@ public class GitOBRRepo extends AbstractIndexedRepo {
 					"Attribute '%s' must be set on GitOBRRepo plugin.",
 					PROP_GIT_BRANCH));
 
-		// Load essential properties
 		String localDirPath = map.get(PROP_LOCAL_DIR);
 		if (localDirPath == null) {
 			localDirPath = System.getProperty("user.home") + "/.gitobrrepo/" + escape(gitUri);
@@ -122,6 +94,7 @@ public class GitOBRRepo extends AbstractIndexedRepo {
 		}
 
 		gitRootDir = new File(localDirPath);
+
 		if (!gitRootDir.isDirectory())
 			throw new IllegalArgumentException(String.format(
 					"Local path '%s' does not exist or is not a directory.",
@@ -138,20 +111,18 @@ public class GitOBRRepo extends AbstractIndexedRepo {
 		}
 
 		String localSubDirPath = map.get(PROP_LOCAL_SUB_DIR);
+		File dir;
 		if (localSubDirPath != null) {
-			storageDir = new File(gitRootDir, localSubDirPath);
-			if (!storageDir.exists()) {
-				storageDir.mkdirs();
+			dir = new File(gitRootDir, localSubDirPath);
+			if (!dir.exists()) {
+				dir.mkdirs();
 			}
 		} else {
-			storageDir = gitRootDir;
+			dir = gitRootDir;
 		}
+		map.put(PROP_LOCAL_DIR, dir.getAbsolutePath());
 
-		// Configure the storage repository
-		Map<String, String> storageRepoConfig = new HashMap<String, String>(2);
-		storageRepoConfig.put(FileRepo.LOCATION, storageDir.toString());
-		storageRepoConfig.put(FileRepo.READONLY, map.get(PROP_READONLY));
-		storageRepo.setProperties(storageRepoConfig);
+		super.setProperties(map);
 
 		pretty = "true".equalsIgnoreCase(map.get(PROP_PRETTY));
 
@@ -191,48 +162,14 @@ public class GitOBRRepo extends AbstractIndexedRepo {
 
 			//TODO: Check if jar already exists, is it ok to overwrite in all repositories?
 
-			newFile = storageRepo.put(jar);
-
-			// Index the new file
-			BundleIndexer indexer = registry.getPlugin(BundleIndexer.class);
-			if (indexer == null)
-				throw new IllegalStateException(
-						"Cannot index repository: no Bundle Indexer service or plugin found.");
-			ByteArrayOutputStream newIndexBuffer = new ByteArrayOutputStream();
-			Map<String,String> config = new HashMap<String, String>();
-			config.put(BundleIndexer.ROOT_URL, gitRootDir.getCanonicalFile().toURI().toURL().toString());
-			indexer.index(Collections.singleton(newFile), newIndexBuffer, config);
-
-			// Merge into main index
-			File tempIndex = File.createTempFile("repository", ".xml");
-			FileOutputStream tempIndexOutput = new FileOutputStream(tempIndex);
-			MergeContentFilter merger = new MergeContentFilter();
-			XMLReader reader = SAXUtil.buildPipeline(new StreamResult(
-					tempIndexOutput), new UniqueResourceFilter(), merger);
-
-			try {
-				// Parse the newly generated index
-				reader.parse(new InputSource(new ByteArrayInputStream(
-						newIndexBuffer.toByteArray())));
-
-				// Parse the existing index (which may be empty/missing)
-				try {
-					reader.parse(new InputSource(new FileInputStream(localIndex)));
-				} catch (Exception e) {
-					reporter.warning(
-							"Existing local index is invalid or missing, overwriting (%s).",
-							localIndex.getAbsolutePath());
-				}
-
-				merger.closeRootAndDocument();
-			} finally {
-				tempIndexOutput.flush();
-				tempIndexOutput.close();
-			}
-			IO.copy(tempIndex, localIndex);
+			newFile = super.put(jar);
 
 			// Add, Commit and Push
-			git.add().addFilepattern(getRelativePath(gitRootDir, newFile)).addFilepattern(getRelativePath(gitRootDir, localIndex)).call();
+			for (IRepositoryContentProvider provider : generatingProviders) {
+				if (!provider.supportsGeneration())
+					continue;
+				git.add().addFilepattern(getRelativePath(gitRootDir, newFile)).addFilepattern(getRelativePath(gitRootDir, new File(provider.getDefaultIndexName(pretty)))).call();
+			}
 			git.commit().setMessage("bndtools added bundle : " + getRelativePath(gitRootDir, newFile)).call();
 			git.push().setCredentialsProvider(CredentialsProvider.getDefault()).call();
 
@@ -247,17 +184,12 @@ public class GitOBRRepo extends AbstractIndexedRepo {
 		return newFile;
 	}
 
-	public File getCacheDirectory() {
-		return null;
-	}
-
-	@Override
-	public boolean canWrite() {
-		return storageRepo.canWrite();
-	}
-
 	public String getLocation() {
 		return gitUri;
+	}
+
+	public File getCacheDirectory() {
+		return null;
 	}
 
 	private static String getRelativePath(File base, File file) throws IOException {
@@ -266,35 +198,12 @@ public class GitOBRRepo extends AbstractIndexedRepo {
 	
 	@Override
 	protected List<URL> loadIndexes() throws Exception {
-		// Set the local index location
-		String indexFileName = contentProvider.getDefaultIndexName(pretty);
-		localIndex = new File(storageDir, indexFileName);
-		if (localIndex.exists() && !localIndex.isFile())
-			throw new IllegalArgumentException(
-					String.format(
-							"Cannot build local repository index: '%s' already exists but is not a plain file.",
-							localIndex.getAbsolutePath()));
-		try {
-			List<URL> indexUrls = new ArrayList<URL>();
-			if (localIndex.exists()) {
-				indexUrls.add(localIndex.toURI().toURL());
-			}
-			if (gitRepoXmlUri != null) {
-				URL gitRepo = new URL(gitRepoXmlUri);
-				indexUrls.add(gitRepo);
-			}
-			return indexUrls;
-		} catch (IOException e) {
-			throw new IllegalArgumentException("Error initialising local index URL", e);
+		List<URL> indexes = super.loadIndexes();
+		if (gitRepoXmlUri != null) {
+			URL gitRepo = new URL(gitRepoXmlUri);
+			indexes.add(gitRepo);
 		}
-	}
-
-	public Collection<URL> getOBRIndexes() throws IOException {
-		try {
-			return getIndexLocations();
-		} catch (Exception e) {
-			throw new IOException(e.getMessage());
-		}
+		return indexes;
 	}
 
 	protected void configFileInit() {
